--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,8 +16,15 @@ jobs:
     - name: Install build dependencies
       run: sudo apt-get update && sudo apt-get -y install build-essential
 
-    - name: Install criterion
-      run: sudo apt-get -y install libcr-dev
+    - name: Download and install criterion
+      run: |
+        git clone --branch v3.1.3 --depth 1 https://github.com/Snaipe/Criterion.git
+        cd Criterion
+        mkdir build
+        cd build
+        cmake ..
+        make
+        sudo make install
 
     - name: configure
       run: make clean all -C . && echo "build done"
