--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,14 +17,7 @@ jobs:
       run: sudo apt-get update && sudo apt-get -y install build-essential
 
     - name: Download and install criterion
-      run: |
-        git clone https://github.com/Snaipe/Criterion.git
-        cd Criterion
-        mkdir build
-        cd build
-        cmake ..
-        make
-        sudo make install
+      run: apt-get install libcriterion-dev
 
     - name: configure
       run: make clean all -C . && echo "build done"
