--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,5 @@ jobs:
     - name: configure
       run: make clean all -C . && echo "build done"
     - name: test
-      run: bin/${EXEC}_tests -S --verbose=0 --timeout 30
+      run: bin/fliki_tests -S --verbose=0 --timeout 30
 
