--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,10 @@ jobs:
 
     - name: Clean bin and make
       run: make clean all -C . && echo "build done"
-
+  
+  test:
+    runs-on: ubuntu-latest
+    steps:
     - name: Run Test Cases
       run: bin/fliki_tests -S --verbose=0 --timeout 30
 
